--- a/style.css
+++ b/style.css
@@ -1,15 +1,10 @@
-/* COLORS */
-/*
-Blue logo: rgb(8,100,252)
-Light Blue filter buttons: rgba(220,237,253,255)
-Background Accommodations Section: rgba(242,242,242,255)
-*/
 :root { 
+    /* COLORS */
     --bookiBlue: #0065FC;
     --lighterBlue: #DEEBFF;
     --bgGray: #F2F2F2;
+    --neutralGray: rgb(100,100,100);
 }
-
 
 /* PAGE */
 
@@ -21,6 +16,38 @@ header, main {
     padding: 0px 4%;
 }
 
+a {
+    text-decoration: none;
+    color: var(--neutralGray);
+    font-weight: 500;
+}
+
+h1 {
+    font-size: 22px;
+    font-weight: 700;
+}
+
+h2 {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+h3 {
+    font-size: 13px;
+    font-weight: 600;
+    color: black;
+}
+
+p {
+    color: gray;
+    font-size: 13px;
+    padding: 5px 10px;
+}
+
+strong {
+    color: black;
+    font-weight: 600;
+}
 
 /* HEADER */
 
@@ -36,15 +63,8 @@ header .logo {
 }
 
 .navLinks {
-    list-style: none;
     display: flex;
     flex-flow: row nowrap;
-}
-
-a {
-    text-decoration: none;
-    color: rgb(100,100,100);
-    font-weight: 500;
 }
 
 .navLinks div {
@@ -53,21 +73,13 @@ a {
 }
 
 .navLinks a:visited {
-    color: rgb(100,100,100);
+    color: var(--neutralGray);
 }
 
 .navLinks a:hover {
     border-top: 2px solid var(--bookiBlue);
     color: var(--bookiBlue);
 }
-
-/*
-.navLinks a:active {
-    border-top: 2px solid var(--bookiBlue);
-    color: var(--bookiBlue);
-}
-*/
-
 
 /* MAIN */
 
@@ -78,33 +90,31 @@ main{
 /* MAIN - SEARCH INPUT */
 
 .searchTitle {
-    height: 4em;
+    height: 64px;
     display: flex;
     flex-flow: column;
     justify-content: space-around;
 }
 
 .searchInput {
-    margin: 1em 0em;
+    margin: 16px 0px;
     border-radius: 8px;
     display: flex;
-    height: 2em;
-/*    align-items: stretch; */
-/*    border: 2px solid rebeccapurple;  */
-    width: fit-content;
-/*    box-shadow: 0px 1px 1px rgba(0,0,0,0.2);   */
+    height: 38px;
 }
 
 .iconInput {
     background-color: var(--bgGray);
-    padding: .5em 10px;
+    padding: 0px 12px;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
+    display: flex;
+    align-items: center;
 }
 
 #textInput {
     border: 1px solid var(--bgGray);
-    padding-inline-start: 15px;
+    padding-inline-start: 16px;
 }
 
 .searchButton {
@@ -113,7 +123,6 @@ main{
     border: none;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-    font-size: .8em;
     padding: 0px 10px;
     cursor: pointer;
 }
@@ -133,17 +142,16 @@ main{
 
 .filter {
     display: flex;
-    margin-bottom: 1em;
+    margin-bottom: 18px;
 }
 
 .filterLabel{
-    padding-right: 1em;
+    padding-right: 16px;
     display: flex;
     align-items: center;
     font-weight: 600;
-    font-size: small;
+    font-size: 14px;
 }
-
 
 .filterButtons {
     display: flex;
@@ -183,10 +191,9 @@ main{
     font-weight: 700;
 }
 
-
 .filterInfo {
     color: gray;
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
 }
 
 .filterInfo i {
@@ -195,38 +202,28 @@ main{
     border-radius: 50%;
     box-shadow: 0px 0px 2px rgba(100,100,100,.9);
     margin-right: 5px;
-/*    
-    color: rgb(8,100,252);
-    scale: .8;
-    padding: 1px 6px;
-    border-radius: 50%;
-    box-shadow: 0px 0px 2px rgba(100,100,100,.9);
-    margin-right: 5px;
-*/
 }
 
 /* MAIN - ACCOMMODATION SECTION */
 
-h1 {
-    font-size: 1.3em;
-    font-weight: 700;
+
+#accommodations {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
 }
 
-h2 {
-    font-size: larger;
-    font-weight: 700;
+.accommodations {
+    background: var(--bgGray);
+    padding: 16px;
+    border-radius: 20px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
 }
 
-h3 {
-    font-size: small;
-    font-weight: 600;
-    color: black;
-}
-
-p {
-    color: gray;
-    font-size: .8em;
-    padding: 5px 10px;
+.sectionTitle {
+    padding: 16px 24px;
 }
 
 .cardContent {
@@ -254,26 +251,6 @@ p {
    align-items: flex-start;
 }
 
-#accommodations {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-}
-
-.accommodations {
-    background: var(--bgGray);
-    padding: 1em;
-    border-radius: 20px;
-    width: 60%;
-/*    margin-inline-end: 15px;    */
-    display: flex;
-    flex-direction: column;
-}
-
-.sectionTitle {
-    padding: 1em 1.5em;
-}
-
 .accommodationCards {
     display: flex;
     flex-flow: row wrap;
@@ -295,51 +272,30 @@ p {
     min-height: 160px;
 }
 
-.accommodationImg {
+.accommodationImg img {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     height: 100px;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-
+    width: 100%;
+    object-fit: cover;
 }
-
-.accommodationImg img {
-    min-width: 100%;
-    min-height: 100%;
-
-}
-
-/*
-.accommodationCard h3 {
-    padding: 10px 10px 0px;
-    font-weight: 600;
-}
-*/
-
-
-/*
-.accommodationCard p {
-    color: gray;
-    font-size: .8em;
-    padding: 5px 10px;
-}
-*/
-
 
 .showMore {
-    padding: 1em 2em;
+    height: 34px;
+    padding: 8px 32px;
     font-weight: 600;
+    display: flex;
+    align-items: center;
 }
 
 .showMore a {
     color: black;
-    font-size: 1em;
+    font-size: 16px;
 }
 
 .showMore a:hover {
-    font-size: 1.1em;
+    color: var(--bookiBlue);
+    font-size: 18px;
     transition: ease-in-out .3s;
 }
 
@@ -353,16 +309,15 @@ p {
 }
 
 .mostPopularTitle {
-    padding: 1em 1.5em;
+    padding: 16px 24px;
     display: flex;
     justify-content: space-between;
-    
 }
 
 .mostPopularCards {
     display: flex;
     flex-flow: column nowrap;
-    padding: 1em;
+    padding: 16px;
     justify-content: space-around;
     align-items: center;
     height: 85%;
@@ -384,37 +339,33 @@ p {
     overflow: hidden;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    height: 8em;
+    height: 130px;
     width: 30%;
     min-width: 100px;
-    display: flex;
-    justify-items: center;
-/*    object-fit: cover;  */
-    
 }
 
 .mostPopularImg img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    min-width: 100%;
-/*  min-height: 100%; */
+    object-position: 50% 50%;
 }
 
 /* MAIN - ACTIVITIES */
 
 #activities {
     margin: 3em 0px;
-    height: fit-content;
 }
 
 .activitiesTitle {
-    padding: 1em;
+    padding: 16px;
 }
 
 .activitiesCards {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    height: 30em;
+    height: 480px;
 }
 
 .columnCards {
@@ -430,30 +381,28 @@ p {
     overflow: hidden;
     margin: 10px;  
     box-shadow: 0px 1px 8px rgba(100,100,100,.3);
+    justify-content: flex-end;
+}
+
+.grow {
+    flex-grow: 2;
 }
 
 .activitiesCardImg {
-/*    width: fit-content;  */
+    height: 100%;
+}
+
+.activitiesCardImg img {
     min-width: 100%;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
+    height: 100%;
+    object-fit: cover;
 }
 
 .activitiesCardTitle {
-    display: flex;
-    align-items: center;
-    padding: 1.1em;
+    padding: 18px;
     background-color: white;
     margin-bottom: 0px;
 }
-
-/*
-.col02 .col03 {
-    height: 180px;
-}
-*/
-
 
 /* FOOTER */
 
@@ -462,7 +411,7 @@ footer {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    padding: 3rem 5%;
+    padding: 48px 5%;
 }
 
 .footerColumn {
@@ -470,11 +419,11 @@ footer {
 }
 
 .footerList {
-    margin-top: 1rem;
+    margin-top: 16px;
 }
 
 .footerList li {
-    padding: .4rem 0;
+    padding: 6px 0;
     color: gray;
     font-weight: 500;
 }
@@ -494,7 +443,6 @@ footer {
 
     .navLinks{
         width: 100%;
-        justify-content: space-around;
         border-bottom: 6px solid var(--bgGray);
     }
 
@@ -513,10 +461,9 @@ footer {
         border-top: none;
         margin-bottom: -4px;
         border-bottom: 4px solid var(--bookiBlue);
-
     }
 
-    /* */
+    /* MAIN 992px */
 
     main {
         padding: 0px 0px;
@@ -532,7 +479,7 @@ footer {
     /* ACCOMMODATIONS 992px */
 
     #accommodations {
-        flex-flow: column-reverse wrap;
+        flex-flow: column-reverse;
     }
 
     .accommodations {
@@ -544,29 +491,13 @@ footer {
 
     .accommodationCards {
         align-self: center;
-        flex-flow: row wrap;
         width: 95%;
-        align-items: center;
+        
     }
 
     .accommodationCard {
         width: 40%;
     }
-
-    /*
-    .accommodationCards {
-        align-self: center;
-        flex-flow: column;
-        width: 90%;
-        align-items: center;
-    }
-
-    .accommodationCard {
-        flex-flow: column nowrap;
-        width: 90%;
-        justify-content: center;
-    }
-    */
 
     /* MOST POPULAR 992px */
 
@@ -580,24 +511,36 @@ footer {
     }
   
     .mostPopularTitle {
-        padding: 2em 2em 0em;
+        padding: 32px 32px 0px;
         width: 85%;
         align-self: center;
     }
 
     .mostPopularCards {
-        width: 90%;
+        width: 95%;
         flex-flow: row nowrap;
         align-self: center;
-
+        
     }
 
-    /* Activities 992px */
+    .mostPopularCard {
+        min-height: 140px;
+    }
+
+    .mostPopularImg {
+        height: 138px;
+    }
+
+    /* ACTIVITIES 992px */
     
     #activities {
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
+    }
+
+    #activities {
+        margin: 0px 0px 48px;
     }
 
     .activitiesTitle, .sectionTitle, .showMore {
@@ -608,8 +551,8 @@ footer {
     .activitiesCards {
         flex-flow: column nowrap;
         align-items: center;
-        height: fit-content;
         width: 90%;
+        height: auto;
     }
     
     .columnCards {
@@ -622,19 +565,11 @@ footer {
         width: 100%;
     }
 
-    /*
-    .activitiesCardImg {
-    }  
-    */
-
-    .activitiesCardImg img {
-        min-width: 100%;
-    }
-
-
 }
 
-@media screen and (max-width:  768px) {
+@media screen and (max-width: 768px) {
+
+    /* FILTERS 768px */
 
     .filter {
         flex-flow: column nowrap;
@@ -643,8 +578,13 @@ footer {
     .filterButtons {
         margin: 12px 0px;
         flex-flow: row wrap;
-        gap: 5px;
     }
+
+    .filterButton {
+        margin: 5px;
+    }
+
+    /* SEARCH BUTTONS 768px */
 
     .searchDesktop {
         display: none;
@@ -654,29 +594,31 @@ footer {
         display: flex;
     }
 
+    /* ACCOMMODATIONS 768px */
+
     .accommodationCards {
         flex-flow: column nowrap;
+        align-items: center;
     }
 
     .accommodationCard {
-        width: 85%;
+        width: 90%;
     }
-/*
-    #accommodations {
-        flex-flow: column-reverse wrap;
-    }
-*/
+
+    /* MOST POPULAR 768px */
 
     .mostPopularCard {
         width: 90%;
     }
 
     .mostPopularCards {
-        flex-flow: row wrap;
+        flex-flow: column nowrap;
     }
 
+    /* ACTIVITIES 768px */
+
     .columnCards {
-        flex-flow: column;
+        flex-flow: column nowrap;
         width: 100%;
     }
 
@@ -684,7 +626,7 @@ footer {
         width: 95%;
     }
 
-/* FOOTER */
+    /* FOOTER 768px */
 
     footer {
         flex-flow: column nowrap;
@@ -693,6 +635,6 @@ footer {
 
     .footerColumn {
         width: 80%;
-        padding: 1rem;
+        padding: 16px;
     }
 }
